package de.example.domain.usecases;

import de.example.domain.entities.exit.ExitStatus;

import java.util.function.Function;

public class RunUseCase implements Function<String, ExitStatus> {
    @Override
    public ExitStatus apply(String cmd) {
        // TODO: Implement
        return null;
    }
}
